--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                 Whether you're a seasoned astronaut in the DeFi galaxy or a novice stargazer, all are welcome to join the $MACMILLER community. Connect with us on social media, engage in discussions on our forums, and prepare for liftoff with the cosmic crew.
                             </p>
                             
-                            <p style="color: black;" class="banner-des">CA: TBA</p>
-                            <a style="margin: 10px;" href="https://dexscreener.com/solana/" target="_blank" class="btn-large">Dex Screener</a>
+                            <p style="color: black;" class="banner-des">CA: H2CyPHfsx3c1knR1bDao5hsJEA2id5Nsx4rQkXp5juz6</p>
+                            <a style="margin: 10px;" href="https://dexscreener.com/solana/H2CyPHfsx3c1knR1bDao5hsJEA2id5Nsx4rQkXp5juz6" target="_blank" class="btn-large">Dex Screener</a>
                             <a style="margin: 10px;" href="https://t.me/MacMillerSolanaPortal" target="_blank" class="btn-large">Telegram Channel</a>
                             <a style="margin: 10px;" href="https://twitter.com/MacMillerOnSol" target="_blank" class="btn-large">Twitter</a>
                         </div>
@@ -118,7 +118,7 @@
                 <div class="txtholder">
                     <div class="col-12" style="z-index: 2;">
 
-                        <style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/solana/?embed=1&theme=dark&trades=0&info=0"></iframe></div>
+                        <style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/solana/H2CyPHfsx3c1knR1bDao5hsJEA2id5Nsx4rQkXp5juz6?embed=1&theme=dark&trades=0&info=0"></iframe></div>
                     </div>
                     
                 </div>
